--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <label for="contactEmail" class="form-check-label">Email</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="contactMethod" id="contactEmail" value="email" checked>
-                <label for="contactEmail" class="form-check-label">Email</label>
+                <input class="form-check-input" type="radio" name="contactMethod" id="contactPhone" value="phone" checked>
+                <label for="contactPhone" class="form-check-label">Phone</label>
             </div>
         </div>
 
